Bug 264070 - Cannot apply screen position changes
Summary: Cannot apply screen position changes
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_randr (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Gustavo Pichorim Boiko
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-23 13:23 UTC by Kai Uwe Broulik
Modified: 2011-11-15 09:18 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch (999 bytes, patch)
2011-11-09 16:32 UTC, Florian Eßer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2011-01-23 13:23:16 UTC
Version:           unspecified (using KDE 4.5.95) 
OS:                Linux

When only changing a screen‘s position in multiscreen configuration, e.g. the absolute position or choose another position from the dropdown menu, you cannot apply those changes as the apply button stays greyed out. You need to change at least one other setting to apply the settings. And often then the position still isn‘t changed asnd you need to switch to another screen resolution and switch back for the changes to apply.

Reproducible: Always
Comment 1 Florian Eßer 2011-11-09 14:26:18 UTC
Same problem here, using KDE 4.7.3

Changing the numerical screen position X/Y values does not enable the "Apply" button.
Comment 2 Kai Uwe Broulik 2011-11-09 16:01:41 UTC
Should be easily fixable:
I think somebody forgot a:

connect(sizeCombo,    SIGNAL(currentIndexChanged(int)), this, SIGNAL(setConfigDirty()));

in [kde-workspace] kcontrol/randr/outputconfig.cpp on Line 56
Comment 3 Kai Uwe Broulik 2011-11-09 16:03:45 UTC
Oh, pardon, misread (my) bugreport :P
It’s about the absolutePosX and absolutePosY
Comment 4 Florian Eßer 2011-11-09 16:32:04 UTC
Created attachment 65445 [details]
Patch

missing connection.
Comment 5 Florian Eßer 2011-11-09 16:32:15 UTC
I just tried it out, but SIGNAL(valueChanged(int)) seems to be triggered somewhere during the widget's initialization, too. Thus the config dialog gets a dirty config if you just look at it, so on leaving the dialog without actually having changed anything, the user still gets an annoying "You have unsaved changes" warning message.

Using
connect(absolutePosX, SIGNAL(editingFinished()), this, SLOT(setConfigDirty()));
instead works better.

I have created a patch, should I commit directly it or create a review request at reviewboard.kde.org first? (If yes: which group is responsible?)
Comment 6 Kai Uwe Broulik 2011-11-09 16:42:53 UTC
Hmm, try Solid (Hardware Awareness) and/or add Alex Fiestas, I think he is/was working on the Screen Configuration KCM :)
Comment 7 Christoph Feck 2011-11-15 09:18:07 UTC
Git commit 558bc0d77e7076e5111f511e0fe41a9a792e2e1a by Christoph Feck, on behalf of Thomas Gahr.
Committed on 15/11/2011 at 10:14.
Pushed by cfeck into branch 'master'.

Fix "Changing positions does not enable Apply button"

We had two identical bug reports ... therefore, we got two review
request... Closing both.

BUG: 264070
REVIEW: 102631

See also:
BUG: 273102
REVIEW: 103093

M  +16   -1    kcontrol/randr/outputconfig.cpp

http://commits.kde.org/kde-workspace/558bc0d77e7076e5111f511e0fe41a9a792e2e1a