Fix "Changing positions does not enable Apply button"

We had two identical bug reports ... therefore, we got two review
request... Closing both.

BUG: 264070
REVIEW: 102631

See also:
BUG: 273102
REVIEW: 103093